Fixes loading spinner gap color
This change got forgotten in a canceled PR
(https://github.com/groupbuddies/council/pull/42)
It fixes the small black gap in the loading spinner

--- a/app/assets/stylesheets/components/_spinner.css.sass
+++ b/app/assets/stylesheets/components/_spinner.css.sass
@@ -1,9 +1,12 @@
 
 .Spinner
   $spinner-color: theme-palette(accent-secondary)
-  .md-inner .md-left .md-half-circle
-    border-top-color: $spinner-color
-    border-left-color: $spinner-color
-  .md-inner .md-right .md-half-circle
-    border-top-color: $spinner-color
-    border-right-color: $spinner-color
+  .md-inner
+    .md-gap
+      border-top-color: $spinner-color
+    .md-left .md-half-circle
+      border-top-color: $spinner-color
+      border-left-color: $spinner-color
+    .md-right .md-half-circle
+      border-top-color: $spinner-color
+      border-right-color: $spinner-color
